Fixing errors settings mypy and flake8

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
   "python.linting.flake8Enabled": true,
   "python.testing.unittestEnabled": false,
   "python.linting.mypyEnabled": true,
-  "python.linting.flake8Args": ["--ignore=F401", "--max-line-length=120"]
+  "python.linting.flake8Args": ["--ignore=F401", "--max-line-length=120"],
+  "python.linting.mypyArgs": ["--config-file=${workspaceFolder}/mypy.ini"]
 }
