--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,42 @@
 # flake8 and pycodestyle don't support pyproject.toml
 # https://github.com/PyCQA/flake8/issues/234
 # https://github.com/PyCQA/pycodestyle/issues/813
+[coverage:run]
+branch = True
+omit =
+  devteamtask/*/migrations/*.py
+
 [flake8]
-max-line-length = 119
+max-line-length = 120
 exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv,.venv
 
 [pycodestyle]
 max-line-length = 119
 exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv,.venv
+
+[mypy]
+python_version = 3.10.6
+
+check_untyped_defs = True
+disallow_any_generics = True
+disallow_untyped_calls = True
+disallow_untyped_decorators = True
+ignore_errors = False
+ignore_missing_imports = True
+implicit_reexport = False
+strict_optional = True
+strict_equality = True
+no_implicit_optional = True
+warn_unused_ignores = True
+warn_redundant_casts = True
+warn_unused_configs = True
+warn_unreachable = True
+warn_no_return = True
+
+plugins =
+  mypy_django_plugin.main,
+  mypy_drf_plugin.main
+
+
+[mypy.plugins.django-stubs]
+django_settings_module = config.settings
