--- a/mypy.ini
+++ b/mypy.ini
@@ -1,2 +1,5 @@
-plugins =
-    mypy_drf_plugin.main
+[mypy]
+plugins = mypy_django_plugin.main
+
+[mypy.plugins.django-stubs]
+django_settings_module = config.settings.local
