--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "python.linting.flake8Enabled": true,
   "python.testing.unittestEnabled": false,
   "python.linting.mypyEnabled": true,
+  "python.formatting.provider": "black",
   "python.linting.flake8Args": ["--ignore=F401", "--max-line-length=120"],
   "python.linting.mypyArgs": ["--config-file=${workspaceFolder}/mypy.ini"]
 }
